--- a/src/styles/RightLanding.css
+++ b/src/styles/RightLanding.css
@@ -18,6 +18,7 @@
   border: none;
   text-align: right;
   font-family: "Cormorant Garamond", serif;
+  white-space: nowrap;
   color: #ffffff;
   background: #282c34;
   transition: all 0.3s ease-in-out;
@@ -34,6 +35,7 @@
   border: none;
   text-align: right;
   font-family: "Cormorant Garamond", serif;
+  white-space: nowrap;
   color: #ffffff;
   background: #282c34;
   transition: all 0.3s ease-in-out;
